assets/styles/main.css
:root {
  --sticky-hide: 7vh;
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
body {
  font-family: 'Arimo', sans-serif;
}
nav {
  max-width: 99vw;
  border-bottom: 1px solid white;
  background-color: #fffdfd;
  overflow: hidden;
  z-index: 9;
}
.logo {
  width: 106px;
  height: 48px;
  background-color: #f42;
  background: linear-gradient(to bottom right, #c09, #f42 85%);
  position: fixed;
  top: 0;
  left: 0;
  z-index: 33;
}
.topNav {
  background-color: black;
  height: 3vh;
  list-style: none;
  overflow: hidden;
  padding-left: 107px;
}
.topNav li {
  display: inline-block;
}
.topNav li a {
  display: inline-block;
  color: #b8b5b5;
  text-decoration: none;
  line-height: 1.2vh;
  font-size: 13px;
  padding: 7px 6px;
}
.topNav li a:hover {
  color: #fff;
}
.topNav li a:active {
  color: #fff;
}

.mainNav {
  position: sticky;
  top: 0;
  padding-left: 107px;
  overflow: hidden;
}

.navLinks {
  height: var(--sticky-hide);
  background-color: #fffdfd;
  display: flex;
  justify-content: space-between;
  align-items: center;
  overflow: hidden;
}

.mainNavLinks {
  list-style: none;
  overflow: hidden;
  height: 100%;
  width: 60%;
  border-right: solid 1px #c7c4c4;
}
.mainNavLinks li {
  display: inline-block;
  padding-top: 9px;
}
.mainNav ul {
  padding: 0;
}
.mainNavLinks li a {
  color: #b8b5b5;
  text-decoration: none;
  text-transform: uppercase;
  line-height: 1.2vh;
  font-size: 14px;
  padding: 7px 3px;
}
.mainNavLinks li a:hover {
  color: #3b3a3a;
  background-color: #fffdfd;
}
.mainNavRight {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 40%;
  padding: 0 10px;
}
.fa-search {
  color: #c0bcbc;
}
.fa-bars {
  color: #ec4545;
  font-size: 22px;
}
.timer {
  color: #ec4545;
  font-size: 22px;
}
.countdown-text {
  font-size: 12px;
}
.btn-tickets {
  background-color: #0cc;
  border-style: none;
  border-radius: 5px;
  color: #ffffff;
  height: 38px;
  width: 93px;
  font-size: 11px;
  font-weight: 700;
}
.yellow {
  background-color: #fd3;
  height: 3vh;
  position: sticky;
  top: var(--sticky-hide);
  padding-top: 3px;
  box-shadow: 0 16px 48px #00000026;
}
.yellow a {
  text-decoration: none;
  font-size: 14px;
  padding-left: 12px;
  color: #000000;
  height: var(--sticky-hide);
}
.yellow {
  background-color: yellow;
  height: 5vh;
  position: sticky;
  top: var(--sticky-hide);
  transition: all 0.5s ease;
}

.headHero {
  display: grid;
  max-width: 100vw;
  min-height: 60vh;
  grid-template-columns: repeat(3, 33.3%);
  grid-auto-rows: repeat(auto-fit, 50%);
  grid-gap: 4px;
  padding: 4px;
  margin: 4px;
}
.cover-header-hero {
  grid-column: 1 / span 2;
  grid-row: 1 / span 2;
  background: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2018/10/moonday-morning-bitcoin-blockchain-cryptocurrency-hacks-ethereum-796x448.jpg')
    50% no-repeat;
  background-size: cover;
  position: relative;
  
  
}
.small-header-hero {
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50%;
}
#small-headline-1 {
  background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/04/Robot-rights-2-796x417.png');
}
#small-headline-2 {
  background-image: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/04/Untitled-design36-796x417.png');
}
.cover-gradient {
  position: absolute;
  background: linear-gradient(to bottom right, orangered, black 85%);
  opacity: 0.6;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
}

.grid-container {
  display: grid;
}
.four-columns {
  grid-template-columns: repeat(4, 24%);
  grid-auto-rows: minmax(100px, 1fr);
  gap: 1%;
}
.flex-columns {
  grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
  grid-auto-rows: minmax(100px, 1fr);
}
.x1024 {
  max-width: 1150px;
  margin: 0 auto;
}

.news-section {
  /* position: relative; */
  gap: 10px;
}

.news-section img {
  float: left;
  width: 65px;
  margin: 10px;
}

.logo-section {
  background-color: #fff4f2;
  height: 100px;
}
.icon-box {
  margin: 15px;
  font-size: 0.9em;
}
.icon-box .fas {
  margin: 0 10px;
  color: #000;
}
.deal-item {
  background-color: #fffaf8;
  color: dimgray;
}
.deal-item .title {
  background-color: orangered;
  color: #fff;
  height: 45px;
  line-height: 45px;
}
.item-footer {
  border-top: 1px solid orangered;
  padding: 20px;
  font-size: 0.75em;
}
.fiscal {
  margin: 5px 5px 0 5px;
  color: #000;
}
.sub-fiscal {
  color: gray;
  margin: 0;
  padding: 0;
}

.advert {
  height: 250px;
  margin: 30px auto;
  width: 970px;
}
.flex-wrapper {
  margin-bottom: 9em;
}
.flex-row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}
.flex-item {
  width: 25%;
  height: 15vw;
  flex-basis: 25%;
  padding: 5px;
  line-height: 1.3em;
  margin-bottom: 5em;
}
.flex-item-img {
  width: 100%;
  height: 135px;
}
.deals-item-img {
  width: 100%;
  height: 196px;
}
/* .deal-span{
text-decoration: line-through;
} */
.flex-item h4 {
  margin-top: 8px;
  color: #000;
  font-weight: bold;
}
.flex-item p {
  font-size: 13px;
  color: #aaa;
  margin-top: 10px;
  text-align: justify;
}
#news-img-1 {
  background: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/04/australia-asic-cryptocurrency-ico-regulation-sanctions-bitcoin-480x270.jpg')
    50% no-repeat;
  background-size: cover;
}
#news-img-2 {
  background: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/04/satoshitreasure-1-480x270.png')
    50% no-repeat;
  background-size: cover;
}
#news-img-3 {
  background: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/04/Untitled-design-21-516x270.jpg')
    50% no-repeat;
  background-size: cover;
}
#news-img-4 {
  background: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/04/yahoo_1200-516x270.png')
    50% no-repeat;
  background-size: cover;
}
#news-img-5 {
  background: url('https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/04/Untitled-design-5-1-516x270.png')
    50% no-repeat;
  background-size: cover;
}
/* ... */

